[CHANGED] Fixed color of nav text in dark mode

--- a/app/client/src/scss/layout/navigation.scss
+++ b/app/client/src/scss/layout/navigation.scss
@@ -21,7 +21,7 @@
         .nav_link{
             display: flex;
             flex-direction: column;
-            color: var(--ColorWhite);
+            color: $ColorWhite;
             justify-content: center;
             align-items: center;
             height: 100%;
